# serializer version: 1
# name: test_bigfile_capped_emit[aqua_FreeSize_GSU9]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x128_MI16x16xTXA0XCSs8PMxJWh034TagRllh9CwjUQ1hwe2KPyCZ-M=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x32_MI16x16x1Jy9GsUbAIq0EML9GOr8b-KuwzSg1OzMQ1YMgQNNOPi4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x64_MI16x16x18hlTjTylFUkh8xJLuENg2IU_FiQHI-D9nILQ7vxFeI0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x128_MI16x16xiJbcO1VASZ0_1EVtRcmU8jpvIKhlYTi1_cCfA0UpQeo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x32_MI16x16x1T9AbkWTTwquAAKK_5EI0rNoFI3cgXJBPperdj4-cMUw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x64_MI16x16x13taAcKhHrrRzaHc69gS82kL0lB4FSYRGIg4W6O6oan4=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[equality_gfx950_HSS_big]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT1Kg24ERH_-2dbimkQFJF2myn_rjubi34jxYlihXVHBqM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT24-J7KhgItiohgqwVkCG4YyIkEIL9AvUEJbBXXSzeEKQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2POYk9GZNz9Cw8AnZMOmAC5fwpIpCUJu6aG9YGeDoOEo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2UHIkAvZfwWHNdAOClNWAkUMZySI6U4L06dy4voghBao=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2pGBRKCDrFu8sFNsoJwQ7dBo71eauU_IuH1D3gB2a5fk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2zJFUnxFi5HSXEpsLI2NLjKcSi72lJhwdRWvkXE97n5w=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[freesize_gfx942_F8NH_GSU]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT16e_UFP8qpsC9rl2J5fH4VXVsqq8vF7EjZdwlqo9cARY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT17Wgm90EDtUAdqDm4l67QWYkEhmRo1pXfFSUJCM7qt5I=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT19kcmKEMsjXBmG1547tXZTjGOaufOMrrDFi0kjLnbY8M=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1iwW6_-dDi_dS-QyBV40VGJMR_ySEbgtq__6M-gWlcbs=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1q5u0zBKGHnV9MWTxKFNKDLfgfw_V9D316m6XgGy_WNI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1w31fMw9RAkEk7HHFJMKgY_dFncUrLz0KJUmdghMyDFM=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx1201_I8II]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT128x14gVHrk2RQHHr84CJSyNoHyZkM1WR1tejar_16WyMWuc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT16x6427VY2iPoGADhfKZqFBOdOnFm9NC9jjBnN6EGZDcFk5g=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT16x64m64jd_n1ji3NCoTiUDsWRL02h_oS2ayKnu_GesYYE8s=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x12pu0aReAz3nsvle0eB32qYHngFCKLV7c6oOdLw49jH4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x1OEozFeH4v9XTeL66xYAbtE4F47BAuwFq2vVrNvHTIWU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x1UUMMINdSIo_MMtn_sw-n-Ljo5JYYcpckd525QUXN20I=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx1250_GG]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_GG_HA_S_SAV_UserArgs_AGNQs5Nnem7lIJleih0yuZFvzl39qjQARkvHTGTbzWc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_GG_HA_S_SAV_UserArgs_bWWVi5jXYBxJJuv0T8En-KRq7udP_sANa3MK1VxHEno=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_GG_HA_S_SAV_UserArgs_f1q4sd-TeagP3q5Zv3nvHCb-sblQRdcqZ-06U3YZto0=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx90a_HSS_big]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI32Rawj_V5DyFXZLQDvhVsK6IP0laxCaouLnWeuICf8rMU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI32n4cJGpUCaKb_JuhEO4ankoLr6Xb_pAwxrW8Qpr3z82s=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI32zHbxBtokfsvR5Nt_Nv1P-JI6v6dWJv0ITWKUaN-49k0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x192x64_MI328QO9Pg8RDbPIb-YCMJ9TrCZAUqxST5jcDTpKL_N4IA8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x32x64_MI32x1lF7C1F1mJKb-mZ7vGxvg9SXkEn2ULm89p-UkvtYqBQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x32x64_MI32xeQQ-rE2vZjyuwjbxKh2XjT-NTXbyeJRgWlyQWuQxeKc=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx950_origami_MX]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1G4Ums-5ynzjIqHKmSrFn4WizqWzRP9284auY2FVt3QU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1IPkPHytD-tSZlBC3z4MWEa90tzrC_OWJbedRw3-GxLg=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1ko8jbLHy2TDlkt89jj5vaCyrZtCmludCjK4iDGiUvIM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1oCrKz7zhutRKdPlQrlfFDGwcPNsmZq6-50XVGTIvq1E=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1qQ9YyQKSmnRMYVRbEoD_HYjd8REzlDo6xbrFDMxO_4g=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1xO83dirfhSTc-J8CpSbrwPOoiSldj6uSCmOWqVahTtw=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[navi31_HSS]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT11S_eyVR4TL8pu6sG452z0vhX3IRwpsi3-yMqhm952ic=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT1FWz6oceYsuj0ZHFjSbualUlrXQjq9BzbwoHtaLCI_FU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT3Jg_En6k5boUWg5PdfFx59CHETGG6EXVnc3-zTZfrQNU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT3TWIy9YIe22zrN5QWDQAnnNHFdtjJ0TXgb3922W5uLH8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT41B3Uu8wt7L0nlGQC4h8cer2niOilJEEL73LjFQinVis=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT4lZ00gichTNV6skT33MAmiR1JqWmjXSacUG6Y5y1L8i0=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[streamk_gfx942_Ailk]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT112x256x16_MI16x16UUn2Ci2cqfyY75IqYuEK30oUTQJuNYK5rvW_UXqMgJw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT112x256x32_MI16x16fIfhxPTaRX8zO1novClnlov7XwoSMcOaJwVdb7ZmQ_o=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT128x128x16_MI16x168R2eb92z66n--fRSY_jTBtao8jpjINg0JD3Mj9qQwuU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT128x128x32_MI16x16bMxeJYak2aRo9F97NX0PobVLKFjUOxPCwrbPO36Jwg8=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[streamk_gfx942_S]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT112x256x16_MI16x16dm4X8GM-XGFIatzEgNP9SQE9CFwxGUvRy7AYExhK-Go=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT112x256x32_MI16x16upF2TKAzNrNVt22u6JuMMjog0Sx75ClEDQHPjEj5Uuk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x128x16_MI16x16nCy3AbSJz93A-q725pf0ORF2IxzteyPDXg2mmlB0PkE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x128x32_MI16x16FxfYfY85WiGiTi38_vRINgfSPcFHkY4A8sgQlyZZtes=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x160x16_MI16x16-h0k-vRnZuvX7l91I1RyiyyF9HZONkYj17zPkGoI7oA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x160x32_MI16x16F6OSt3WKO0y5PhmW-fHn1yCteC5OO1gA0F-23UyZoNA=',
      'err': 0,
    }),
  ])
# ---
